--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@react-navigation/stack": "^5.11.1",
     "add": "^2.0.6",
     "axios": "^0.21.0",
+    "body-parser": "^1.19.0",
     "expo": "~39.0.2",
     "expo-status-bar": "~1.0.2",
+    "express": "^4.17.1",
+    "mongodb": "^3.6.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
