--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/stack": "^5.11.1",
     "add": "^2.0.6",
     "axios": "^0.21.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "expo": "~39.0.2",
     "expo-status-bar": "~1.0.2",
